@@ -1,27 +1,0 @@
-name             = Parse-ErrorString-Perl
-author           = Petar Shangov, C<< <pshangov at yahoo.com> >>
-author           = Gabor Szabo L<http://szabgab.com/>
-author           = Ahmad M. Zawawi <ahmad.zawawi@gmail.com>
-license          = Perl_5
-version          = 0.15
-copyright_holder = Petar Shangov
-
-homepage         = http://padre.perlide.org
-repository       = http://svn.perlide.org/padre/trunk/Parse-ErrorString-Perl/
-
-[@Filter]
-bundle = @Basic
-
-[AutoPrereqs]
-[CheckChangeLog]
-[CheckChangesTests]
-[CompileTests]
-[EOLTests]
-[PodWeaver]
-[PkgVersion]
-[MetaResources]
-[MetaConfig]
-[MetaJSON]
-[NextRelease]
-format = %-7v %{yyyy.MM.dd}d
-[PodSyntaxTests]
