@@ -2,6 +2,8 @@ Revision history for Parse-ErrorString-Perl
 
 {{$NEXT}}
 
+        * Convert to Module::Install (SZABGAB)
+
 0.15    2010.11.29
         * Bumped Pod::POM dependency to version 0.27 to fix RT #54062 "Test failure
           on perl 5.11.4" (AZAWAWI)
